# VDL

./: README.md  pyproject.toml
vdl/: main.py
vdl/backend/: utils.py
vdl/backend/placeholder/: cookies.txt  twitter_cookies.txt
vdl/cogs/audio_finder_cog/: af_mixin.py  audio_finder.py
vdl/cogs/format_converter_cog/: format_converter.py
vdl/cogs/image_dl_cog/: image_dl.py  img_dl_mixin.py
vdl/cogs/media_dl_cog/: media_dl.py  tt_dl_mixin.py  yt_dl_mixin.py
