[tool.poetry]
name = "vdl"
version = "1.0.0"
description = "media downloader bot"
authors = ["saevitus"]


[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
disnake = "^2.9.1"
gallery-dl = "^1.26.4"
shazamio = "^0.4.0.1"
moviepy = "^1.0.3"
ffmpeg = "^1.4"
yt-dlp = "^2023.11.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
